Add Gemini lesson builder feature and workflow docs

--- a/ai-web/backend/.env.example
+++ b/ai-web/backend/.env.example
@@ -1,2 +1,4 @@
 # Environment variables (never commit real keys)
 GEMINI_API_KEY=
+# Override the default Gemini model if you need a specific capability.
+GEMINI_MODEL=
