--- a/ai-web/frontend/package.json
+++ b/ai-web/frontend/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "prop-types": "^15.8.1"
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
