--- a/ai-web/docker-compose.yml
+++ b/ai-web/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_BASE=https://didactic-space-enigma-55gqr455w5j3vvvj-8000.app.github.dev
+      - VITE_API_BASE=http://localhost:8000
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/vite.config.js:/app/vite.config.js
